<resources>
    <string name="app_name">PdfCanvas</string>
    <string name="draw">画图</string>
    <string name="move">移动</string>
    <string name="next_page">下一页</string>
    <string name="last_page">上一页</string>
    <string name="next_page_error">已到达最后一页</string>
    <string name="last_page_error">已到达第一页！</string>
    <string name="show_screenshot">Take Screenshot</string>
    <string name="signature_hint">First and last name</string>
    <string name="age_hint">Age</string>
    <string name="signature_label">Insert your signature here</string>
    <string name="free_draw">画笔</string>
    <string name="line_draw">画线</string>
    <string name="circle_draw">画圆</string>
    <string name="black">黑色</string>
    <string name="red">红色</string>
    <string name="blue">蓝色</string>
    <string name="purple">紫色</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="discard">清空</string>
    <string name="undo_fail_text">无法撤销</string>
    <string name="redo_fail_text">无法重做</string>
    <string name="save">保存</string>
    <string name="save_fail">保存失败</string>
    <string name="save_success">保存完成</string>
    <string name="load_fail">读取时发生错误</string>
    <string name="load">读取</string>
    <string name="save_in_process">正在保存……</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="edit">编辑</string>
    <string name="info">帮助</string>
    <string name="edit_title">编辑课程</string>
    <string name="top_title">课程目录</string>
    <string name="bottom_title">待组织PDF</string>
    <string name="add_course_hint">添加课程</string>
    <string name="manage_course_rename_hint">Place your course name here.</string>
    <string name="rename_source_button_hint">重命名课程</string>
    <string name="add_chapter_hint">添加章节</string>
    <string name="delete_course_hint">删除本课程</string>
    <string name="rename_chapter_button_hint">重命名章节</string>
    <string name="manage_chapter_rename_hint">Put your chapter name here.</string>
    <string name="delete_chapter_hint">删除本章节</string>
    <string name="bind_pdf_hint">添加PDF</string>
    <string name="empty_pdf_hint">未选中PDF</string>
    <string name="save_list_changes_button_hint">保存更改</string>
    <string name="discard_list_changes_button_hint">取消更改</string>
</resources>
