<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.example.pdfcanvas.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/buttons_layout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:text="@string/save"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/load_button"
                android:text="@string/load"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/last_page_button"
                android:text="@string/last_page"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_page_button"
                android:text="@string/next_page"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/free_draw_button"
                android:text="@string/free_draw"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/line_draw_button"
                android:text="@string/line_draw"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/circle_draw_button"
                android:text="@string/circle_draw"/>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttons_layout_2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/black_button"
                android:text="@string/black"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/red_button"
                android:text="@string/red"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/blue_button"
                android:text="@string/blue"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/purple_button"
                android:text="@string/purple"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/undo_button"
                android:text="@string/undo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/redo_button"
                android:text="@string/redo"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/discard_button"
                android:text="@string/discard"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_bar_width"
                android:max="2"
                android:progress="0" />
        </LinearLayout>
    </ScrollView>

    <android.support.percent.PercentFrameLayout
        android:layout_toEndOf="@id/buttons_layout"
        android:layout_toStartOf="@id/buttons_layout_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutContainer">

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_aspectRatio="133%"
            app:layout_widthPercent="100%"/>

        <net.example.freedrawview.FreeDrawView
            android:id="@+id/drawView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_aspectRatio="133%"
            app:layout_widthPercent="100%"
            android:background="@color/transparent"
            app:paintAlpha="255"
            app:paintColor="@color/black"
            app:paintWidth="4dp"
            app:resizeBehaviour="crop" />
    </android.support.percent.PercentFrameLayout>

    <TextView
        android:id="@+id/textViewDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_above="@id/layoutContainer"/>
</RelativeLayout>
