<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--标题栏-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_widthPercent="100%">
        <Button
            android:id="@+id/save_list_changes_button"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_list_changes_button_hint"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/discard_list_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/discard_list_changes_button_hint"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <!--标题栏以下-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--左边-->
        <android.support.percent.PercentRelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            app:layout_widthPercent="38%" >
            <!--左上课程目录-->
            <LinearLayout
                android:id="@+id/top_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                app:layout_heightPercent="50%">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/top_title"/>
                <ExpandableListView
                    android:id="@+id/course_list_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <!--左下待组织pdf-->
            <LinearLayout
                android:id="@+id/bottom_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                app:layout_heightPercent="50%">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bottom_title"/>
                <ListView
                    android:id="@+id/pdf_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </android.support.percent.PercentRelativeLayout>
        <!--右边-->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            app:layout_widthPercent="62%" >

            <!--default_panel-->
            <RelativeLayout
                android:id="@+id/default_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/add_course"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_course_hint"/>
            </RelativeLayout>
            <!--manage_course_panel-->
            <LinearLayout
                android:id="@+id/manage_course_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >
                <LinearLayout
                    android:id="@+id/course_rename_holder"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/rename_source_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rename_source_button_hint"/>
                    <EditText
                        android:id="@+id/manage_course_rename_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/manage_course_rename_hint"/>
                </LinearLayout>

                <Button
                    android:id="@+id/delete_course"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_course_hint"/>
                <Button
                    android:id="@+id/add_chapter"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_chapter_hint"/>
                <Button
                    android:id="@+id/add_course_2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_course_hint"/>
            </LinearLayout>

            <!--manage_chapter_panel-->
            <LinearLayout
                android:id="@+id/manage_chapter_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <LinearLayout
                    android:id="@+id/chapter_rename_holder"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/rename_chapter_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rename_chapter_button_hint"/>
                    <EditText
                        android:id="@+id/manage_chapter_rename_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/manage_chapter_rename_hint"/>
                </LinearLayout>

                <Button
                    android:id="@+id/delete_chapter"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_chapter_hint"/>
                <Button
                    android:id="@+id/add_chapter_2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_chapter_hint"/>
                <Button
                    android:id="@+id/bind_pdf"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bind_pdf_hint"/>
                <TextView
                    android:id="@+id/pdf_name_to_bind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/empty_pdf_hint"/>
            </LinearLayout>
        </FrameLayout>

    </android.support.percent.PercentRelativeLayout>

</LinearLayout>

</LinearLayout>